# btcmap-admin

./: .env.example  .env.sample  .envrc  .gitignore  .replit  AGENTS.md  API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT.md  MIGRATION_SUMMARY.md  NIP98_IMPLEMENTATION.md  NOSTR_AUTH_SETUP.md  Pasted--coordinates-57-631615861601894-2-64643012040933--1730717801933.txt  Pasted--id-120-name-geo-json-value-n-type-Polygon-n-coordinates-n-n--1734616286623.txt  README.md  VALIDATION_RULES.md  app.py  auth.py  biome.json  constants.py  flake.nix  helper.py  linting.py  main.py  models.py  nostr_utils.py  opencode.jsonc  package-lock.json  package.json  pyproject.toml  railway.toml  replit.nix  requirements.txt  run.sh  setup_ssh.sh  user_store.py  utils.py
.github/workflows/: lint.yml
flask_app/: app.py  requirements.txt
flask_app/templates/: base.html  index.html  select_area.html  show_area.html
static/css/: map.css  style.css
static/js/: icon-cropper.js  map-editor.js  osm-geojson-generator.js  script.js  utils.js  validation.js
templates/: add_area.html  base.html  error.html  login.html  maintenance.html  profile.html  select_area.html  show_area.html
templates/components/: _geojson_generator.html  _map_editor.html
